# image-gallery

./: .gitignore  CMakeLists.txt
qml/: Main.qml
src/: gallerymodel.cpp  gallerymodel.h  main.cpp
